   * item graphic improvements including animate-able campfire.
   * terrain
     * added peaks to the impassable mountains
   * unit art
     * added a recruit animation for Skeleton
 * language and i18n:
   * new/updated man pages:
   * updated translations: German, Italian
   * fixed huge list of spelling mistakes in the en_US version
 * multiplayer
   * game management
     * client now tells the server if a game ended in victory or defeat
     * configurable castle size for random map generator (patch #598, FR #3232)
     * team names translation now supported
   * scenarios
     * scenarios can set faction, recruit, leader, and some other initial settings
       previously ignored in multiplayer
   * maps:
     * new multiplayer maps: The Manzivan Traps
     * revised maps: Blitz
 * Python AI
   * Added various input validations
   * Set Python errors upon error
   * added support for optipng optimization in the compilation process
 * units:
   * balancing changes:
     * increased the HP of the Longbowman from 45 to 51
     * decreased the XP requirement of the Longbowman from 80 to 68
     * increased the HP of the Master Bowman from 58 to 67
     * increased the XP requirement of the Guardsman from 42 to 47
     * increased the HP of the Stalwart from 48 to 54
     * increased the XP requirement of the Stalwart from 65 to 85
     * increased the HP of the Sentinel from 56 to 68
     * decreased cost of the Mudcrawler from 9 to 5
     * Dark Adepts no longer get the 'strong' trait
     * decreased the HP of the Shadow from 26 to 24
     * added the skirmisher ability to the Shadow line
     * increased the HP of the Goblin Rouser from 26 to 31
     * increased the melee damage of the Goblin Rouser from 5-3 to 6-3
   * adapted WML to use [if] statements to differentiate hit and miss frames
   * new traits
     * healthy (+3HP, +4 rest healing), fearless (ignore unfavorable ToD)
   * new units
     * added the Armageddon Drake (not used in any mainline eras)