@@ -68,6 +68,7 @@ Detailed changelog and internal changes:
    * fixed huge list of spelling mistakes in the en_US version
  * multiplayer
    * game management
+     * fixed controler change not sended to all client (bug #8138)
      * client now tells the server if a game ended in victory or defeat
      * configurable castle size for random map generator (patch #598, FR #3232)
      * team names translation now supported
